chore(refactor): centralize models, deprecate feature-level type stubs, add error tests
- Move feature type definitions to `src/models` and re-export for compatibility
- Add `src/deprecated/types-backup/*` and `type.deprecated.ts` backups
- Add `src/__tests__/apiClient.error.test.ts` and `src/__tests__/thunks.error.test.ts` for validator/thunk error flows
- Update `.gitignore` to ignore deprecated backups
- Ensure build and tests pass (verified)

--- a/client/.gitignore
+++ b/client/.gitignore
@@ -22,3 +22,7 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Deprecated feature-level type stubs (kept as backups locally)
+src/features/stepq/type.deprecated.ts
+src/features/users/type.deprecated.ts
